Fix other services wrapping on ipad

--- a/src/App.scss
+++ b/src/App.scss
@@ -387,7 +387,7 @@ h3 { font-size: 1.75rem; }
 h4 { font-size: 1.5rem; }
 
 .lead {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
     font-weight: 300;
 }
 
@@ -413,8 +413,6 @@ h4 { font-size: 1.5rem; }
           clear: both;
         }
     }
-
-
 
     .service {
         width: 100%;
